--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,12 +4,11 @@ WORKDIR /app
 
 COPY src/ .
 
-ARG ip
-
+ARG PUBLIC_IP
 RUN pip install -r requirements.txt
 
 
-RUN sed -i "s#socketio = SocketIO(app, cors_allowed_origins='http://localhost:3000')#socketio = SocketIO(app, cors_allowed_origins='http://${ip}:8081')#g" app.py
+RUN sed -i "s#socketio = SocketIO(app, cors_allowed_origins='http://localhost:3000')#socketio = SocketIO(app, cors_allowed_origins='http://${PUBLIC_IP}:8081')#g" app.py
 ENTRYPOINT ["python3"]
 EXPOSE 8080
 CMD ["-u", "app.py"]
