--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,10 +6,10 @@ WORKDIR /home/stud
 
 COPY src/ .
 
-ARG ip
 
+ARG PUBLIC_IP
 
-RUN sed -i "s#const baseUrl = 'http://localhost:8080';#const baseUrl = 'http://${ip}:8080';#g" tic_tac_toe.js
+RUN sed -i "s#const baseUrl = 'http://localhost:8080';#const baseUrl = 'http://${PUBLIC_IP}:8080';#g" tic_tac_toe.js
 ENTRYPOINT ["busybox"]
 EXPOSE 3000
 CMD ["httpd", "-f", "-v", "-p", "3000"]
